--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.16",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
