--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "paypal-rest-sdk": "^1.8.1",
     "razorpay": "^2.0.6",
     "twilio": "^3.54.0"
   },
