Modified name in manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "MovieMaster",
-  "name": "MovieMaster | Built for comfortability | Enjoy the show",
+  "name": "MovieMaster | Enjoy the show",
   "icons": [
     {
       "src": "favicon.ico",
