--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-flash": "0.0.2",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "express-unless": "^0.5.0",
     "googleapis": "^67.0.0",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
